Add undo (FP) and card ids
Give cards a UUID, this will make storing events more straightforward.
Pull the session into its own file, and add undo for the FP backend.

--- a/shared/example_deck.csv.html
+++ b/shared/example_deck.csv.html
@@ -2,15 +2,17 @@
 <body class='flashcards-deck'>
 <div class='card'>
 <ul>
+<li class='entry'><span data-type='Symbol' data-value='id' class='key'>:id</span>: <span data-type='String' data-value='e2dbeedc-5a04-4c91-b5e1-cf5c7ce319a7' class='value'>&quot;e2dbeedc-5a04-4c91-b5e1-cf5c7ce319a7&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='front' class='key'>:front</span>: <span data-type='String' data-value='a' class='value'>&quot;a&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='back' class='key'>:back</span>: <span data-type='String' data-value='あ' class='value'>&quot;あ&quot;</span></li>
-<li class='entry'><span data-type='Symbol' data-value='factor' class='key'>:factor</span>: <span data-type='Float' data-value='2.35' class='value'>2.35</span></li>
-<li class='entry'><span data-type='Symbol' data-value='interval' class='key'>:interval</span>: <span data-type='Fixnum' data-value='60' class='value'>60</span></li>
-<li class='entry'><span data-type='Symbol' data-value='streak' class='key'>:streak</span>: <span data-type='Fixnum' data-value='0' class='value'>0</span></li>
-<li class='entry'><span data-type='Symbol' data-value='last_review_time' class='key'>:last_review_time</span>: <span data-type='Time' data-value='2016-02-21 21:01:39 +1100' class='value'>2016-02-21 21:01:39 +1100</span></li>
+<li class='entry'><span data-type='Symbol' data-value='factor' class='key'>:factor</span>: <span data-type='Float' data-value='2.5' class='value'>2.5</span></li>
+<li class='entry'><span data-type='Symbol' data-value='interval' class='key'>:interval</span>: <span data-type='Fixnum' data-value='600' class='value'>600</span></li>
+<li class='entry'><span data-type='Symbol' data-value='streak' class='key'>:streak</span>: <span data-type='Fixnum' data-value='1' class='value'>1</span></li>
+<li class='entry'><span data-type='Symbol' data-value='last_review_time' class='key'>:last_review_time</span>: <span data-type='Time' data-value='2016-02-22 09:01:11 +1100' class='value'>2016-02-22 09:01:11 +1100</span></li>
 </ul>
 </div><div class='card'>
 <ul>
+<li class='entry'><span data-type='Symbol' data-value='id' class='key'>:id</span>: <span data-type='String' data-value='c84b6686-3d98-43b0-b215-b381e63b20fc' class='value'>&quot;c84b6686-3d98-43b0-b215-b381e63b20fc&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='front' class='key'>:front</span>: <span data-type='String' data-value='i' class='value'>&quot;i&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='back' class='key'>:back</span>: <span data-type='String' data-value='い' class='value'>&quot;い&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='factor' class='key'>:factor</span>: <span data-type='Float' data-value='2.65' class='value'>2.65</span></li>
@@ -20,15 +22,17 @@
 </ul>
 </div><div class='card'>
 <ul>
+<li class='entry'><span data-type='Symbol' data-value='id' class='key'>:id</span>: <span data-type='String' data-value='88ab55d5-9ea1-4c30-8087-c14f1a3390d5' class='value'>&quot;88ab55d5-9ea1-4c30-8087-c14f1a3390d5&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='front' class='key'>:front</span>: <span data-type='String' data-value='u' class='value'>&quot;u&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='back' class='key'>:back</span>: <span data-type='String' data-value='う' class='value'>&quot;う&quot;</span></li>
-<li class='entry'><span data-type='Symbol' data-value='factor' class='key'>:factor</span>: <span data-type='Float' data-value='2.5' class='value'>2.5</span></li>
-<li class='entry'><span data-type='Symbol' data-value='interval' class='key'>:interval</span>: <span data-type='Fixnum' data-value='600' class='value'>600</span></li>
-<li class='entry'><span data-type='Symbol' data-value='streak' class='key'>:streak</span>: <span data-type='Fixnum' data-value='1' class='value'>1</span></li>
-<li class='entry'><span data-type='Symbol' data-value='last_review_time' class='key'>:last_review_time</span>: <span data-type='NilClass' data-value='' class='value'>nil</span></li>
+<li class='entry'><span data-type='Symbol' data-value='factor' class='key'>:factor</span>: <span data-type='Float' data-value='2.35' class='value'>2.35</span></li>
+<li class='entry'><span data-type='Symbol' data-value='interval' class='key'>:interval</span>: <span data-type='Fixnum' data-value='60' class='value'>60</span></li>
+<li class='entry'><span data-type='Symbol' data-value='streak' class='key'>:streak</span>: <span data-type='Fixnum' data-value='0' class='value'>0</span></li>
+<li class='entry'><span data-type='Symbol' data-value='last_review_time' class='key'>:last_review_time</span>: <span data-type='Time' data-value='2016-02-22 09:01:19 +1100' class='value'>2016-02-22 09:01:19 +1100</span></li>
 </ul>
 </div><div class='card'>
 <ul>
+<li class='entry'><span data-type='Symbol' data-value='id' class='key'>:id</span>: <span data-type='String' data-value='c597bec3-ad3e-4683-85e8-0df458d6b3d8' class='value'>&quot;c597bec3-ad3e-4683-85e8-0df458d6b3d8&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='front' class='key'>:front</span>: <span data-type='String' data-value='e' class='value'>&quot;e&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='back' class='key'>:back</span>: <span data-type='String' data-value='え' class='value'>&quot;え&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='factor' class='key'>:factor</span>: <span data-type='Float' data-value='2.5' class='value'>2.5</span></li>
@@ -38,6 +42,7 @@
 </ul>
 </div><div class='card'>
 <ul>
+<li class='entry'><span data-type='Symbol' data-value='id' class='key'>:id</span>: <span data-type='String' data-value='3341f479-0aca-4379-ba2c-74956e9a3d42' class='value'>&quot;3341f479-0aca-4379-ba2c-74956e9a3d42&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='front' class='key'>:front</span>: <span data-type='String' data-value='o' class='value'>&quot;o&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='back' class='key'>:back</span>: <span data-type='String' data-value='お' class='value'>&quot;お&quot;</span></li>
 <li class='entry'><span data-type='Symbol' data-value='factor' class='key'>:factor</span>: <span data-type='Float' data-value='2.5' class='value'>2.5</span></li>
